[package]
name = "lrpp"
version = "0.1.1"
license = "MIT"
edition = "2021"
description = "A Rust library for packet parsing."
repository = "https://github.com/cr0mll/librpp"
categories = ["parsing", "parser-implementations", "network-programming"]
keywords = ["librpp", "lrpp", "packet", "parsing", "parser"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num_enum= "0.5.7"